Fixed alignment of social icons on home page

--- a/assets/scss/pages/about.scss
+++ b/assets/scss/pages/about.scss
@@ -54,7 +54,7 @@ main {
 }
 
 .social-icons {
-  justify-content: flex-start;
+  justify-content: center;
   padding-top: 1rem;
   margin-left: -0.8rem;  // offset to negate icon's padding to align with text above
 }
