--- a/assets/scss/partials/_social-icons.scss
+++ b/assets/scss/partials/_social-icons.scss
@@ -1,6 +1,7 @@
 .social-icons {
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
+  align-content: center;
 }
 
 .social-icons__link {
